# pyf_api

./: .dockerignore  .gitignore  Dockerfile  README.md  api.service  app.py  flask-app.service  model_utils.py  nginx.conf  pyproject.toml  requirements.txt  run_app.sh  run_container.sh  service.yml  utils.py
src/: main.py  model_utils.py  schemas.py  utils.py
src/routers/: __init__.py  v1.py  v2.py
